# 3D-ModelViewer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/glad/: glad.h
include/learnopengl/: camera.h  model.h
src/: main.cpp
src/libs/: glad.c
src/libs/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/shaders/: 1.colors.fs  1.model_loading.fs  phong_light.fs  phong_light.vs
